<resources>
    <string name="app_name_consumer">Coinbase</string>
    <string name="app_name_consumer_long">Coinbase for Android</string>
    <string name="app_name_consumer_home_screen">Bitcoin Wallet</string>
    <string name="app_name_merchant">Coinbase Merchant</string>
    <string name="app_name_merchant_long">Coinbase Merchant for Android</string>
    <string name="app_name_merchant_home_screen">Bitcoin Merchant</string>
    <string name="title_account">Account Settings</string>
    <string name="title_transfer">Send / Request</string>
    <string name="title_buysell">Buy / Sell Bitcoin</string>
    <string name="title_transactions">Transactions</string>
    <string name="title_merchant_tools">Merchant Tools</string>
    <string name="title_point_of_sale">Point Of Sale</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_set_up_point_of_sale">Set up point of sale</string>
    <string name="menu_settings">Settings</string>
    <string name="login_desc">Login using your Coinbase Account to continue.</string>
    <string name="menu_sign_out">Sign out</string>
    <string name="login_hint_username">Username</string>
    <string name="login_hint_password">Password</string>
    <string name="login_button_login">Sign in</string>
    <string name="login_progress">Signing in&#8230;</string>
    <string name="login_error_username_empty">Username cannot be empty.</string>
    <string name="login_error_password_empty">Password cannot be empty.</string>
    <string name="login_error_io">Could not login.</string>
    <string name="login_error_auth">Could not sign in.</string>
    <string name="transfer_send_money">Send money</string>
    <string name="transfer_send_money_button">Send</string>
    <string name="transfer_amt">0.00</string>
    <string name="transfer_notes">Notes</string>
    <string name="wallet_balance">%1$s</string>
    <string name="wallet_balance_currency">%1$s</string>
    <string name="wallet_balance_def">-.----</string>
    <string name="wallet_balance_currency_def">BTC</string>
    <string name="wallet_balance_top">Current balance:</string>
    <string name="wallet_balance_send">SEND</string>
    <string name="wallet_balance_request">REQUEST</string>
    <string name="transfer_button_send">Send</string>
<string name="transfer_button_email">Email</string>
    <string name="transfer_button_qrcode">QR Code</string>
    <string name="transfer_button_nfc">NFC</string>
    <string name="transfer_button_clear">Clear</string>
    <string name="transfer_request_money">Request money</string>
    <string name="transfer_request_money_button">Request</string>
    <string name="transfer_buy_title">Buy / sell Bitcoin</string>
    <string name="transfer_buy_message">Sorry, but buying / selling Bitcoin is not currently supported through the Android app. Visit the Coinbase website to buy or sell Bitcoin.</string>
    <string name="transfer_buy_button">Visit the Coinbase website</string>
    <string name="menu_accounts">Accounts</string>
    <string name="menu_barcode">Scan barcode</string>
    <string name="buysell_type_buy">Buy</string>
    <string name="buysell_type_sell">Sell</string>
    <string name="buysell_type_price">for %1$s each</string>
    <string name="buysell_type_price_error">(could not load price)</string>
    <string name="buysell_type_buy_text">Buy</string>
    <string name="buysell_type_sell_text">Sell</string>
    <string name="btc">BTC</string>
    <string name="buysell_amount_hint">0.00</string>
    <string name="buysell_total">%1$s: %2$s %3$s</string>
    <string name="buysell_submit_buy">Buy Bitcoins</string>
    <string name="buysell_submit_sell">Sell Bitcoins</string>
    <string name="buysell_total_error">Could not get price</string>
    <string name="buysell_confirm_message_buy">Are you sure you would like to buy %1$s for %2$s? Your primary bank account will be charged.</string>
    <string name="buysell_confirm_message_sell">Are you sure you would like to sell %1$s for %2$s? Your primary bank account will be credited.</string>
    <string name="buysell_error_exception">The request could not be completed.</string>
    <string name="buysell_error_api">The request could not be completed.</string>
    <string name="buysell_progress">Sending&#8230;</string>
    <string name="buysell_success_buy">Purchased %1$s BTC.</string>
    <string name="buysell_success_sell">Sold %1$s BTC.</string>
    <string name="accounts_title">Choose an account</string>
    <string name="wallet_balance_error">Could not load account balance.</string>
    <string name="login_hint_twofactor">Two-factor code (optional)</string>
    <string name="login_change_login">Don\'t have an account?</string>
    <string name="login_change_signup">Already have an account?</string>
    <string name="login_change_login_desc">Coinbase is the simplest way to buy, use, and accept Bitcoin. Sign up now:</string>
    <string name="login_change_signup_desc">Sign in with your existing Coinbase account.</string>
    <string name="login_title">Log in to Coinbase</string>
    <string name="login_button_signup">Sign up</string>
    <string name="accounts_new">Add account</string>
    <string name="sign_out_confirm">Are you sure you want to sign out?</string>
    <string name="transaction_status_pending">PENDING</string>
    <string name="transaction_status_complete">COMPLETE</string>
    <string name="transaction_summary_request_me">&lt;b&gt;%1$s&lt;/b&gt; requested money from you</string>
    <string name="transaction_summary_request_them">You requested money from &lt;b&gt;%1$s&lt;/b&gt;</string>
    <string name="transaction_summary_send_me">You sent money to &lt;b&gt;%1$s&lt;/b&gt;</string>
    <string name="transaction_summary_send_them">&lt;b&gt;%1$s&lt;/b&gt; sent you money</string>
    <string name="transaction_summary_invoice_them">&lt;b&gt;%1$s&lt;/b&gt; sent you an invoice</string>
    <string name="transaction_summary_invoice_me">You sent an invoice to &lt;b&gt;%1$s&lt;/b&gt;</string>
    <string name="transaction_status_error">Unknown</string>
    <string name="transaction_user_external">an external account</string>
    <string name="transaction_summary_sell">You sold bitcoins</string>
    <string name="transaction_summary_buy">You purchased bitcoins</string>
    <string name="transactiondetails_amountreceived">Amount Received</string>
    <string name="transactiondetails_amountrequested">Amount Requested</string>
    <string name="transactiondetails_from">From</string>
    <string name="transactiondetails_to">To</string>
    <string name="transactiondetails_date">Date</string>
    <string name="transactiondetails_status">Status</string>
    <string name="transactiondetails_amountsent">Amount Sent</string>
    <string name="transactiondetails_notes">Notes</string>
    <string name="transactiondetails_error">Could not load transaction details.</string>
    <string name="transaction_user_you">You</string>
    <string-array name="contributors">
        <item>Isaac Waller (isaac@siriusapplications.com)</item>
        <item>Julian Langschaedel (meta.rb@gmail.com)</item>
        <item>Karim Osman (im@kar.im)</item>
        <item>Aleš Najmann (ales.najmann@gmail.com)</item>
        <item>Carlos Sessa (https://github.com/Macarse)</item>
        <item>Vince Mi (https://github.com/vinc3m1)</item>
        <item>dck28 (https://github.com/dck28)</item>
    </string-array>
    <string name="version_name">2.2</string>
    <string name="menu_about">About</string>
    <string name="menu_help">Help</string>
    <string name="transfer_recipient">Recipient email or bitcoin address</string>
    <string name="transfer_confirm_message_send">Are you sure you would like to send %1$s to %2$s?</string>
    <string name="transfer_confirm_message_request">Are you sure you would like to request %1$s from %2$s?</string>
    <string name="transfer_confirm_message_send_fee">This transaction requires a fee of %3$s BTC to be accepted by the bitcoin network. Are you sure you would like to send %1$s to %2$s?</string>
    <string name="transfer_error_exception">The request could not be completed.</string>
    <string name="transfer_error_api">The request could not be completed.\n\n%1$s</string>
    <string name="transfer_progress">Sending&#8230;</string>
    <string name="transfer_success_send">Sent %1$s BTC to %2$s.</string>
    <string name="transfer_success_request">Requested %1$s BTC from %2$s.</string>
    <string name="transfer_amt_label">Amount</string>
    <string name="about_licence">An open source project\nhttps://github.com/coinbase/coinbase-android\nSource code licenced under Apache License 2.0</string>
    <string name="about_contributors">Contributors:\n\n%1$s</string>
    <string name="about_title">About %1$s</string>
    <string name="transfer_address_title">Your receive address</string>
    <string name="transfer_address_copy">Copy address</string>
    <string name="menu_refresh">Refresh</string>
    <string name="transfer_nfc_ready">NFC is enabled.\n\nHold the back of your device against the back of the other device and touch the screen.</string>
    <string name="transfer_nfc_failure">Could not start NFC transfer.</string>
    <string name="transfer_email_prompt_text">Requesting %1$s from:</string>
    <string name="transfer_email_prompt_hint">Enter email address</string>
    <string name="transactiondetails_request_resend">Re-Send Request</string>
    <string name="transactiondetails_request_cancel">Cancel Request</string>
    <string name="transactiondetails_request_send">Send %1$s to %2$s</string>
    <string name="transactiondetails_request_decline">Decline Payment</string>
    <string name="transfer_amt_empty">You must enter a transfer amount.</string>
    <string name="transfer_recipient_empty">You must enter a recipient.</string>
    <string name="widget_balance_default">0.0000</string>
    <string name="widget_balance_label">Coinbase Balance</string>
    <string name="widget_transactions_label">Coinbase Transactions</string>
    <string name="transactiondetails_title">Transaction details</string>
    <string name="transactiondetails_progress">Sending&#8230;</string>
    <string name="transactiondetails_action_error">Could not take action on transaction (%1$s).</string>
    <string name="wallet_balance_home">≈ %1$s</string>
    <string name="account_name">Name</string>
    <string name="account_email">Email</string>
    <string name="account_time_zone">Time zone</string>
    <string name="account_native_currency">Native currency</string>
    <string name="account_enable_merchant_tools">Merchant tools</string>
    <string name="account_merchant_tools_notice">Now separate app; download from Play Store</string>
    <string name="account_refresh_token">Refresh token</string>
    <string name="account_progress">Working...</string>
    <string name="account_list_error">Could not load list.</string>
    <string name="account_save_success">Saved.</string>
    <string name="buysell_help">To link a bank account with your Coinbase account, visit https://coinbase.com in the browser.</string>
    <string name="transactions_refresh_error">Could not sync transactions.</string>
    <string name="buysell_text2">BTC</string>
    <string name="wallet_balance_label">CURRENT BALANCE</string>
    <string name="wallet_hidden_notice">Balance hidden.</string>
    <string name="wallet_hidden_show"><u>Show balance</u></string>
    <string name="menu_merchant_pin">Passcode settings</string>
    <string name="menu_kiosk_mode_enable">Enable kiosk mode</string>
    <string name="rate_notice_title">Rate this app</string>
    <string name="rate_notice_text">If you enjoy using this app, please take a moment to leave us a review. Thanks!</string>
    <string name="rate_notice_btn_positive">RATE NOW</string>
    <string name="rate_notice_btn_negative">NEVER</string>
    <string name="menu_tip_enable">Enable tip prompt</string>
</resources>