<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeeeee" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/buysell_inner"
        android:padding="@dimen/layout_padding">

        <RelativeLayout
            android:id="@+id/buysell_header"
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:background="@drawable/fragment_transactiondetails_bg"
            android:layout_centerHorizontal="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/buysell_types">

                <TextView
                    android:id="@+id/buysell_type_buy"
                    android:text="@string/buysell_type_buy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:padding="15dp"
                    android:background="@drawable/button_secondary" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:background="#eee"
                    android:id="@+id/buysell_divider_2"
                    />

                <TextView
                    android:id="@+id/buysell_type_sell"
                    android:text="@string/buysell_type_sell"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:textSize="18sp"
                    android:padding="15dp"
                    android:background="@drawable/button_secondary"/></LinearLayout>

            <View
                android:id="@+id/buysell_divider_1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/buysell_types"
                android:background="#eee" />

            <EditText
                android:id="@+id/buysell_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="15dp"
                android:layout_below="@+id/buysell_divider_1"
                android:layout_toLeftOf="@+id/buysell_text2"
                android:layout_alignParentLeft="true"
                android:hint="@string/buysell_amount_hint"
                android:inputType="numberDecimal"
                android:textColor="#50bf82"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/buysell_text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/buysell_amount"
                android:layout_alignParentRight="true"
                android:layout_marginRight="15dp"
                android:text="@string/buysell_text2"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/buysell_total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_below="@+id/buysell_amount"
                android:text=""
                android:lineSpacingExtra="10dp"
                android:gravity="right"
                android:textSize="7pt"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Button
                android:id="@+id/buysell_submit"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/buysell_total"
                android:background="@drawable/button_primary"
                android:textColor="#ffffff"
                android:enabled="false"
                android:filterTouchesWhenObscured="true"
                android:text="@string/buysell_submit_buy" />
        </RelativeLayout>

        <TextView
            android:id="@+id/buysell_help"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/buysell_header"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/buysell_help"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#666666"
            android:autoLink="all"
            android:linksClickable="true"/>
    </RelativeLayout>

</ScrollView>
